5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1721_3061.log
== TEST (2019-05-02 18:20:50) 
-- CODE:
a = float(input("nome:"))
b = float(input("nome:"))
c = float(input("nome:"))
if()
 print(a, b, c)
	if(a==b==c)
	
-- ERROR:
File "XXXX", line 4
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:25:18) 
-- CODE:
a = float(input("nome:"))
b = float(input("nome:"))
c = float(input("nome:"))
if()
 print(a, b, c)
	if(a==b==c)
	print(Drogon)
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:52) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if(nome)
 print(a, b, c)
	if(a<b>c)
	print(Drogon)
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if(nome)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:54) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if(nome)
 print(a, b, c)
	if(a<b>c)
	print(Drogon)
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if(nome)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:31) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if(a, b, c)
 print(terrestre, aereo ou maritimos)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if(a, b, c)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:17) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if( terrestre, aereo, maritimo)
 print(a, b, c)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if( terrestre, aereo, maritimo)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:33) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if( Terrestre, Aereo, Maritimo)
 print(a, b, c)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if( Terrestre, Aereo, Maritimo)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:39) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if(Terrestre, Aereo, Maritimo)
 print(a, b, c)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if(Terrestre, Aereo, Maritimo)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:38:54) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if("Terrestre, Aereo, Maritimo")
 print(a, b, c)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if("Terrestre, Aereo, Maritimo")
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:40:18) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
if(TERRESTRE, AEREO, MARITIMO)
 print(a, b, c)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 4
    if(TERRESTRE, AEREO, MARITIMO)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:41:51) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
	if(a<b>c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 5
    if(a<b>c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:42:15) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
	if(a < b > c)
	print()
	else:
		print(Terrestre)
		else:
			print(aereo)
	
-- ERROR:
File "XXXX", line 5
    if(a < b > c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:43:29) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
	if(a < b > c)
	print("TERRESTRE")
	else:
		print("AEREO")
		else:
			print()
	
-- ERROR:
File "XXXX", line 5
    if(a < b > c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:43:38) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
	if(a < b > c)
	  print("TERRESTRE")
	else:
		print("AEREO")
		else:
			print()
	
-- ERROR:
File "XXXX", line 5
    if(a < b > c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:43:46) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
if(a < b > c)
	  print("TERRESTRE")
	else:
		print("AEREO")
		else:
			print()
	
-- ERROR:
File "XXXX", line 5
    if(a < b > c)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:43:51) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
  if(a < b > c)
	  print("TERRESTRE")
	else:
		print("AEREO")
		else:
			print()
	
-- ERROR:
File "XXXX", line 5
    if(a < b > c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:18) 
-- CODE:
a = float(input("nome:")).lower()
b = float(input("nome:")).lower()
c = float(input("nome:")).lower()
print(a, b, c)
  if(a < b > c)
	  print("TERRESTRE")
	else:
		print("AEREO")
		else:
			print()
	
-- ERROR:
File "XXXX", line 5
    if(a < b > c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
